--- a/public/src/app/features/main.component.html
+++ b/public/src/app/features/main.component.html
@@ -29,7 +29,7 @@
         *ngIf="!vm.isLogged"
         type="button"
         mat-flat-button
-        color="accent"
+        color="warn"
         (click)="login()"
       >
         Login
