--- a/public/src/app/features/auth/auth.component.scss
+++ b/public/src/app/features/auth/auth.component.scss
@@ -1,7 +1,7 @@
 .auth-block {
   width: 1100px;
   height: 650px;
-  box-shadow: 1px 1px 20px 1px rgba(255, 0, 0, 0.7);
+  box-shadow: 1px 1px 20px 1px var(--primary);
   position: absolute;
   inset: 0px;
   margin: auto;
