--- a/public/src/app/features/auth/components/register/register.component.scss
+++ b/public/src/app/features/auth/components/register/register.component.scss
@@ -5,12 +5,14 @@ form {
   h3 {
     text-align: center;
     margin-bottom: 10px;
+    margin-top: 180px;
   }
 }
 .grid-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 0px 40px;
+  grid-gap: 20px 40px;
+  margin-top: 20px;
 }
 .grid-container-double {
   display: grid;
